--- a/src/App.scss
+++ b/src/App.scss
@@ -7,3 +7,27 @@
   width: 500px;
   max-width: 100%;
 }
+
+.full-width {
+  width: 100%;
+}
+
+.flex-form {
+  display: flex;
+  width: 100%;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.interactive-card {
+  .bottom-actions {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    background-color: #fff;
+  }
+}
